# cpp_bag

./: .gitignore  README.MD  att_weight.py  cell_dump.py  clf_result.py  copy_att.py  hct_clf.py  im_score.py  img_need.py  match_test.py  measure_search.py  modeling.py  patch.py  pick_embedding.py  plot_att_weight.py  plot_cell_bag.py  plot_color.py  plot_entropy.py  plot_slide_sample.py  plot_slides.py  pyproject.toml  pytest.ini  report.py  resample_exp.py  runner.py
cpp_bag/: data.py  embed.py  io_utils.py  label_map.py  metric_trainer.py  mk_data.py  model.py  performance.py  plot.py
mist/: pack_cell_img.py  patch.py  plot_entropy.py  prep_mkim.py  resample_exp.py
tests/: data_test.py  embed_test.py  mask_test.py  mk_data_test.py  trainer_test.py
